Sonar Qube의 critical 항목 수정
git-svn-id: https://skvalley.com/svn/repos/storeplatform/trunk/sac/storeplatform-sac@117690 01f5c84a-aead-4b29-b0f1-7c54dbeec05f